tests/reference/asr-test_set_object6-01b4fa7.stderr
semantic error: Unhashable type: 'set[i32]'
 --> tests/errors/test_set_object6.py:2:12
  |
2 |     print({{1, 2}, {3, 4}})
  |            ^^^^^^ Mutable type 'set[i32]' cannot be stored in a set.
